--- a/Fiap.Exemplo01.MVC.Web/Views/Cliente/Cadastrar.cshtml
+++ b/Fiap.Exemplo01.MVC.Web/Views/Cliente/Cadastrar.cshtml
@@ -26,10 +26,15 @@
         @Html.LabelFor(c => c.NecessidadesEspeciais)
         @Html.CheckBoxFor(c => c.NecessidadesEspeciais)
     </div>
-    <div class="datepicker">
+    <div class="form-group">
         @Html.LabelFor(c => c.Nascimento)
         @Html.TextBoxFor(c => c.Nascimento, new { @class = "form-control" })
     </div>
+    <div class="form-group">
+        @Html.LabelFor(c => c.EstadoCivil)
+        @Html.DropDownListFor(c => c.EstadoCivil, ViewBag.Estados as SelectList, new { @class = "form-control" })
+    </div>
+
     <div class="form-group">
         <input type="submit" value="salvar" class="btn btn-primary" />
     </div>
