--- a/Fiap.Exemplo01.MVC.Web/Views/Cliente/Listar.cshtml
+++ b/Fiap.Exemplo01.MVC.Web/Views/Cliente/Listar.cshtml
@@ -14,6 +14,7 @@
             <th>Credito</th>
             <th>Necessidades Especiais</th>
             <th>Data de Nascimento</th>
+            <th>Estado Civil</th>
         </tr>
     </thead>
     <tbody>
@@ -25,6 +26,7 @@
              <td>@item.credito</td>
              <td>@item.NecessidadesEspeciais</td>
              <td>@item.Nascimento</td>
+             <td>@item.EstadoCivil</td>
          </tr>
     }
     </tbody>
